Fix confirm seed page messing when width is too large (#1579)

--- a/app/style/CreateWalletForm.less
+++ b/app/style/CreateWalletForm.less
@@ -64,7 +64,7 @@
 
 .confirm-seed-row {
   margin-right: 10px;
-  width: 560px;
+  width: 100%;
   float: left;
 }
 
